--- a/frontend/ReviewOfCovidSurvivorsAndWarriors/src/photogallery.html
+++ b/frontend/ReviewOfCovidSurvivorsAndWarriors/src/photogallery.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Photo Gallery</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.css">
-	<!-- jQuery library -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
+    <title>Photo Gallery</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css"
+        href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.css">
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
     <script src="../js/jqueryV3.6.0.min.js"></script>
-	<style type="text/css">
+    <style type="text/css">
         .container {
-             width: 80%;
+            width: 80%;
             margin: 30px auto;
             margin-left: 200px;
         }
@@ -24,21 +29,27 @@
             font-size: 44px;
             margin-left: 320px;
         }
-        .container h3{
+
+        .container h3 {
             margin-left: 200px;
         }
-		.container-fluid{
-			padding-left: 40vmin;
-		}
-		.item{
-			transition: .5s ease-in-out;
-		}
-		.item:hover{
-			filter: brightness(80%);
-		}
-        img{
+
+        .container-fluid {
+            padding-left: 40vmin;
+        }
+
+        .item {
+            transition: .5s ease-in-out;
+        }
+
+        .item:hover {
+            filter: brightness(80%);
+        }
+
+        img {
             border-radius: 1rem;
         }
+
         .nav {
             width: 200px;
             height: 200px;
@@ -57,7 +68,7 @@
             display: block;
             background-color: black;
             transition: 300ms;
-            color:white;
+            color: white;
         }
 
         .nav a.active {
@@ -85,107 +96,116 @@
             width: 92%;
 
         }
+
         @media (max-width:768px) {
             .menu {
                 /*side-bar toggling*/
-                    position: absolute;
-                    top: 0;
-                    left: 0;
-                    width: 60px;
-                    height: 60px;
-                    background: #fff;
-                    cursor: pointer;
-                    z-index: 1;
-                    box-sizing: border-box;
-                    border-right: 1px solid rgba(0, 0, 0, 0.1);
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 60px;
+                height: 60px;
+                background: #fff;
+                cursor: pointer;
+                z-index: 1;
+                box-sizing: border-box;
+                border-right: 1px solid rgba(0, 0, 0, 0.1);
             }
 
             .menu span {
-                    position: absolute;
-                    width: 30px;
-                    height: 2px;
-                    background: #262626;
-                    display: block;
-                    top: calc(50% - 1px);
-                    left: calc(50% - 15px);
-                    transition: 0.2s;
+                position: absolute;
+                width: 30px;
+                height: 2px;
+                background: #262626;
+                display: block;
+                top: calc(50% - 1px);
+                left: calc(50% - 15px);
+                transition: 0.2s;
             }
 
             .menu span:nth-child(1) {
-                    transform: translateY(-10px);
+                transform: translateY(-10px);
             }
 
             .menu span:nth-child(3) {
-                    transform: translateY(10px);
+                transform: translateY(10px);
             }
 
             .menu.active span:nth-child(1) {
-                    transform: translateY(0px) rotate(-45deg);
+                transform: translateY(0px) rotate(-45deg);
             }
 
             .menu.active span:nth-child(3) {
-                    transform: translateY(0px) rotate(45deg);
+                transform: translateY(0px) rotate(45deg);
             }
 
             .menu.active span:nth-child(2) {
-                    transform: translateX(-30px);
-                    opacity: 0;
+                transform: translateX(-30px);
+                opacity: 0;
             }
 
 
             .nav {
-                    transition: 0.5s;
-                    transform: translateX(-100%);
+                transition: 0.5s;
+                transform: translateX(-100%);
             }
 
             .nav.active {
-                    height: auto;
-                    transform: translateX(0);
-                    width: 250px;
-                    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-                    z-index: 9;
+                height: auto;
+                transform: translateX(0);
+                width: 250px;
+                border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+                z-index: 9;
             }
 
             .nav.active ul {
 
-                    display: inherit;
-                    float: none;
-                    text-align: center;
+                display: inherit;
+                float: none;
+                text-align: center;
             }
+
             .container {
                 width: 100%;
                 /*margin: 30px auto;*/
                 margin-left: -20vmin;
                 margin-top: 10vmin;
             }
-            .container h1{
+
+            .container h1 {
                 margin-left: 60vmin;
             }
-            .container h3{
+
+            .container h3 {
                 margin-left: 200px;
                 margin-right: -20vmin;
             }
-		    .container-fluid{
+
+            .container-fluid {
                 padding-top: 15vmin;
-			    padding-left: 2vmin;
-		    }
-            @media(max-width: 425px){
-                .container h1{
-                     margin-left: 50vmin;
-                     font-size:30px;
-                     margin-right: -20vmin;
+                padding-left: 2vmin;
+            }
+
+            @media(max-width: 425px) {
+                .container h1 {
+                    margin-left: 50vmin;
+                    font-size: 30px;
+                    margin-right: -20vmin;
                 }
-                .container h3{
+
+                .container h3 {
                     margin-left: 120px;
                     margin-right: -20vmin;
                     font-size: 25px;
                 }
             }
-            @media(max-width: 320px){
-                .container h1{
-                     margin-left: 40vmin;
+
+            @media(max-width: 320px) {
+                .container h1 {
+                    margin-left: 40vmin;
                 }
-                .container h3{
+
+                .container h3 {
                     margin-left: 100px;
                     margin-right: -20vmin;
                     font-size: 20px;
@@ -193,67 +213,68 @@
             }
 
         }
-
-	</style>
+    </style>
 
 </head>
+
 <body>
     <div class="menu">
         <span></span>
         <span></span>
         <span></span>
     </div>
-	<div class="nav">
+    <div class="nav">
         <a href="reviews.php" class="review">Reviews</a>
         <a href="#" class="photo active a">Photo Gallery</a>
         <a href="videogallery.php" class="video">Video Gallery</a>
     </div>
     <div class="container">
-		<h1>Photo Gallery</h1>
+        <h1>Photo Gallery</h1>
         <h3>Respect and gratitude to our Corona Warriors</h3>
     </div>
-	<div class="container-fluid">
-		<div class="row mt-4">
-			<div class="item col-sm-6 col-md-4 mb-3">
-				<a href="../assets/pic9.jpg" class="fancybox" data-fancybox="gallery1">
-					<img src="../assets/pic9.jpg" width="100%" height="100%">
-				</a>
-			</div>
-			<div class="item col-sm-6 col-md-4 mb-3">
-				<a href="../assets/nss2.jpg" class="fancybox" data-fancybox="gallery1">
-					<img src="../assets/nss2.jpg" width="100%" height="100%">
-				</a>
-			</div>
-			<div class="item col-sm-6 col-md-4 mb-3">
-				<a href="../assets/pic11.jpg" class="fancybox" data-fancybox="gallery1">
-					<img src="../assets/pic11.jpg" width="100%" height="100%">
-				</a>
-			</div>
-			<div class="item col-sm-6 col-md-4 mb-3">
-				<a href="../assets/3.jpg" class="fancybox" data-fancybox="gallery1">
-					<img src="../assets/3.jpg" width="100%" height="100%">
-				</a>
-			</div>
-			<div class="item col-sm-6 col-md-4 mb-3">
-				<a href="../assets/img8.jpg" class="fancybox" data-fancybox="gallery1">
-					<img src="../assets/img8.jpg" width="100%" height="100%">
-				</a>
-			</div>
-			<div class="item col-sm-6 col-md-4 mb-3">
-				<a href="../assets/8.jpg" class="fancybox" data-fancybox="gallery1">
-					<img src="../assets/8.jpg" width="100%" height="100%">
-				</a>
-			</div>
-		</div>
-		
-	</div>
+    <div class="container-fluid">
+        <div class="row mt-4">
+            <div class="item col-sm-6 col-md-4 mb-3">
+                <a href="../assets/pic9.jpg" class="fancybox" data-fancybox="gallery1">
+                    <img src="../assets/pic9.jpg" width="100%" height="100%">
+                </a>
+            </div>
+            <div class="item col-sm-6 col-md-4 mb-3">
+                <a href="../assets/nss2.jpg" class="fancybox" data-fancybox="gallery1">
+                    <img src="../assets/nss2.jpg" width="100%" height="100%">
+                </a>
+            </div>
+            <div class="item col-sm-6 col-md-4 mb-3">
+                <a href="../assets/pic11.jpg" class="fancybox" data-fancybox="gallery1">
+                    <img src="../assets/pic11.jpg" width="100%" height="100%">
+                </a>
+            </div>
+            <div class="item col-sm-6 col-md-4 mb-3">
+                <a href="../assets/3.jpg" class="fancybox" data-fancybox="gallery1">
+                    <img src="../assets/3.jpg" width="100%" height="100%">
+                </a>
+            </div>
+            <div class="item col-sm-6 col-md-4 mb-3">
+                <a href="../assets/img8.jpg" class="fancybox" data-fancybox="gallery1">
+                    <img src="../assets/img8.jpg" width="100%" height="100%">
+                </a>
+            </div>
+            <div class="item col-sm-6 col-md-4 mb-3">
+                <a href="../assets/8.jpg" class="fancybox" data-fancybox="gallery1">
+                    <img src="../assets/8.jpg" width="100%" height="100%">
+                </a>
+            </div>
+        </div>
+
+    </div>
     <script type="text/javascript">
-        $(document).ready(function(){
-            $('.menu').click(function(){
-				    $('.menu').toggleClass('active')
-				    $('.nav').toggleClass('active')
-			});
+        $(document).ready(function () {
+            $('.menu').click(function () {
+                $('.menu').toggleClass('active')
+                $('.nav').toggleClass('active')
+            });
         });
     </script>
 </body>
+
 </html>
